Tests compilation fixed

--- a/tests/fpcunitibiblia.lpi
+++ b/tests/fpcunitibiblia.lpi
@@ -36,6 +36,7 @@
               <StackChecks Value="True"/>
             </Checks>
             <VerifyObjMethodCallValidity Value="True"/>
+            <TargetCPU Value="i386"/>
           </CodeGeneration>
           <Linking>
             <Debugging>
