--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -154,7 +154,8 @@
       <Unit0>
         <Filename Value="iBiblia.lpr"/>
         <IsPartOfProject Value="True"/>
-        <CursorPos X="15" Y="4"/>
+        <TopLine Value="2"/>
+        <CursorPos Y="35"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
       </Unit0>
@@ -166,8 +167,8 @@
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="formPrincipal"/>
         <EditorIndex Value="3"/>
-        <TopLine Value="355"/>
-        <CursorPos X="20" Y="365"/>
+        <TopLine Value="832"/>
+        <CursorPos X="3" Y="837"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -176,9 +177,9 @@
         <Filename Value="versiculo.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Versiculo"/>
-        <EditorIndex Value="18"/>
-        <TopLine Value="127"/>
-        <CursorPos X="76" Y="151"/>
+        <EditorIndex Value="16"/>
+        <TopLine Value="1334"/>
+        <CursorPos X="3" Y="1338"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -193,8 +194,10 @@
         <Filename Value="projeto.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Projeto"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="4"/>
-        <CursorPos X="69" Y="20"/>
+        <TopLine Value="1232"/>
+        <CursorPos X="43" Y="1256"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -209,7 +212,7 @@
         <Filename Value="sugestao.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Sugestao"/>
-        <EditorIndex Value="27"/>
+        <EditorIndex Value="24"/>
         <TopLine Value="227"/>
         <CursorPos X="30" Y="245"/>
         <UsageCount Value="207"/>
@@ -221,7 +224,7 @@
         <ComponentName Value="FormNovoProjeto"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="25"/>
+        <EditorIndex Value="22"/>
         <TopLine Value="39"/>
         <CursorPos Y="58"/>
         <UsageCount Value="205"/>
@@ -234,7 +237,7 @@
         <ComponentName Value="frmDictionaryPopup"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="26"/>
+        <EditorIndex Value="23"/>
         <TopLine Value="4"/>
         <CursorPos X="29" Y="56"/>
         <UsageCount Value="201"/>
@@ -255,7 +258,7 @@
         <ComponentName Value="FormPropProjeto"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="29"/>
+        <EditorIndex Value="26"/>
         <TopLine Value="133"/>
         <CursorPos Y="154"/>
         <UsageCount Value="204"/>
@@ -266,7 +269,7 @@
         <Filename Value="memoversiculo.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="MemoVersiculo"/>
-        <EditorIndex Value="28"/>
+        <EditorIndex Value="25"/>
         <TopLine Value="99"/>
         <CursorPos X="28" Y="94"/>
         <UsageCount Value="224"/>
@@ -287,9 +290,8 @@
         <ComponentName Value="frmExportarProjeto"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="15"/>
-        <TopLine Value="103"/>
-        <CursorPos X="35" Y="109"/>
+        <EditorIndex Value="13"/>
+        <CursorPos X="64" Y="9"/>
         <UsageCount Value="203"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -298,7 +300,7 @@
         <Filename Value="exportarprojeto.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ExportarProjeto"/>
-        <EditorIndex Value="14"/>
+        <EditorIndex Value="12"/>
         <TopLine Value="427"/>
         <CursorPos X="35" Y="440"/>
         <UsageCount Value="203"/>
@@ -331,7 +333,7 @@
       <Unit15>
         <Filename Value="twAutomate.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="34"/>
+        <EditorIndex Value="31"/>
         <TopLine Value="13"/>
         <CursorPos X="8" Y="27"/>
         <UsageCount Value="232"/>
@@ -341,7 +343,7 @@
         <Filename Value="twsyncthread.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="twSyncThread"/>
-        <EditorIndex Value="33"/>
+        <EditorIndex Value="30"/>
         <TopLine Value="27"/>
         <CursorPos X="50" Y="47"/>
         <UsageCount Value="212"/>
@@ -351,7 +353,7 @@
         <Filename Value="onttokenizer.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ONTTokenizer"/>
-        <EditorIndex Value="32"/>
+        <EditorIndex Value="29"/>
         <TopLine Value="262"/>
         <CursorPos Y="279"/>
         <UsageCount Value="202"/>
@@ -361,7 +363,7 @@
         <Filename Value="ontparser.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ONTParser"/>
-        <EditorIndex Value="30"/>
+        <EditorIndex Value="27"/>
         <TopLine Value="23"/>
         <CursorPos Y="43"/>
         <UsageCount Value="202"/>
@@ -382,7 +384,7 @@
         <ComponentName Value="FormAbout"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="17"/>
+        <EditorIndex Value="15"/>
         <TopLine Value="11"/>
         <CursorPos X="18" Y="12"/>
         <UsageCount Value="241"/>
@@ -393,7 +395,7 @@
         <Filename Value="myswordmodule.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="MySwordModule"/>
-        <EditorIndex Value="24"/>
+        <EditorIndex Value="21"/>
         <TopLine Value="15"/>
         <CursorPos X="61" Y="33"/>
         <UsageCount Value="213"/>
@@ -428,17 +430,16 @@
       </Unit24>
       <Unit25>
         <Filename Value="C:\Users\rubio\AppData\Local\lazarus\onlinepackagemanager\packages\kcontrols\source\kmemo.pas"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="7120"/>
         <CursorPos X="3" Y="7123"/>
         <UsageCount Value="100"/>
-        <Loaded Value="True"/>
       </Unit25>
       <Unit26>
         <Filename Value="htmlcolors.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="HTMLColors"/>
-        <EditorIndex Value="31"/>
+        <EditorIndex Value="28"/>
         <TopLine Value="71"/>
         <CursorPos X="50" Y="91"/>
         <UsageCount Value="232"/>
@@ -447,7 +448,7 @@
       <Unit27>
         <Filename Value="theworddictionary.pas"/>
         <UnitName Value="TheWordDictionary"/>
-        <EditorIndex Value="13"/>
+        <EditorIndex Value="11"/>
         <TopLine Value="224"/>
         <CursorPos Y="236"/>
         <UsageCount Value="256"/>
@@ -456,7 +457,7 @@
       <Unit28>
         <Filename Value="include\bookdefs.inc"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="12"/>
+        <EditorIndex Value="10"/>
         <TopLine Value="103"/>
         <CursorPos X="13" Y="84"/>
         <UsageCount Value="249"/>
@@ -467,9 +468,9 @@
         <ComponentName Value="FormExportPatch"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="21"/>
-        <TopLine Value="101"/>
-        <CursorPos X="33" Y="117"/>
+        <EditorIndex Value="8"/>
+        <TopLine Value="53"/>
+        <CursorPos X="43" Y="67"/>
         <UsageCount Value="123"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -484,9 +485,9 @@
       <Unit31>
         <Filename Value="bibletreeview.pas"/>
         <UnitName Value="BibleTreeView"/>
-        <EditorIndex Value="22"/>
-        <TopLine Value="28"/>
-        <CursorPos X="50" Y="43"/>
+        <EditorIndex Value="19"/>
+        <TopLine Value="188"/>
+        <CursorPos Y="204"/>
         <UsageCount Value="120"/>
         <Loaded Value="True"/>
       </Unit31>
@@ -496,10 +497,9 @@
         <ComponentName Value="FrmApplyPatch"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <IsVisibleTab Value="True"/>
-        <EditorIndex Value="10"/>
-        <TopLine Value="48"/>
-        <CursorPos X="51" Y="79"/>
+        <EditorIndex Value="7"/>
+        <TopLine Value="108"/>
+        <CursorPos X="104" Y="128"/>
         <UsageCount Value="241"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -508,9 +508,9 @@
         <Filename Value="patchfile.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="PatchFile"/>
-        <EditorIndex Value="11"/>
-        <TopLine Value="8"/>
-        <CursorPos X="32" Y="22"/>
+        <EditorIndex Value="9"/>
+        <TopLine Value="25"/>
+        <CursorPos X="29" Y="38"/>
         <UsageCount Value="241"/>
         <Loaded Value="True"/>
       </Unit33>
@@ -518,7 +518,7 @@
         <Filename Value="projectfile.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ProjectFile"/>
-        <EditorIndex Value="20"/>
+        <EditorIndex Value="18"/>
         <CursorPos X="32" Y="40"/>
         <UsageCount Value="238"/>
         <Loaded Value="True"/>
@@ -576,7 +576,7 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="formInterlinearVerseRules"/>
-        <EditorIndex Value="16"/>
+        <EditorIndex Value="14"/>
         <TopLine Value="31"/>
         <CursorPos X="25" Y="52"/>
         <UsageCount Value="200"/>
@@ -586,7 +586,7 @@
       <Unit42>
         <Filename Value="C:\tools\lazarus\lcl\controls.pp"/>
         <UnitName Value="Controls"/>
-        <EditorIndex Value="23"/>
+        <EditorIndex Value="20"/>
         <TopLine Value="36"/>
         <CursorPos X="3" Y="55"/>
         <UsageCount Value="103"/>
@@ -602,20 +602,18 @@
       <Unit44>
         <Filename Value="ONTMemo\ontmemo.pas"/>
         <UnitName Value="ONTMemo"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="271"/>
         <CursorPos X="11" Y="298"/>
         <UsageCount Value="104"/>
-        <Loaded Value="True"/>
       </Unit44>
       <Unit45>
         <Filename Value="ONTMemo\ontparser.pas"/>
         <UnitName Value="ONTParser"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="154"/>
-        <CursorPos X="28" Y="178"/>
+        <CursorPos Y="178"/>
         <UsageCount Value="104"/>
-        <Loaded Value="True"/>
       </Unit45>
       <Unit46>
         <Filename Value="C:\Users\rubio\AppData\Local\lazarus\onlinepackagemanager\packages\kcontrols\source\kgraphics.pas"/>
@@ -627,16 +625,16 @@
       <Unit47>
         <Filename Value="syntagm.pas"/>
         <UnitName Value="Syntagm"/>
-        <EditorIndex Value="19"/>
-        <TopLine Value="173"/>
-        <CursorPos X="16" Y="190"/>
+        <EditorIndex Value="17"/>
+        <TopLine Value="106"/>
+        <CursorPos X="31" Y="121"/>
         <UsageCount Value="118"/>
         <Loaded Value="True"/>
       </Unit47>
       <Unit48>
         <Filename Value="C:\tools\lazarus\lcl\dialogs.pp"/>
         <UnitName Value="Dialogs"/>
-        <EditorIndex Value="35"/>
+        <EditorIndex Value="32"/>
         <TopLine Value="683"/>
         <CursorPos X="72" Y="700"/>
         <UsageCount Value="113"/>
@@ -645,7 +643,7 @@
       <Unit49>
         <Filename Value="C:\tools\lazarus\components\lazutils\uitypes.pas"/>
         <UnitName Value="UITypes"/>
-        <EditorIndex Value="36"/>
+        <EditorIndex Value="33"/>
         <CursorPos X="3" Y="18"/>
         <UsageCount Value="113"/>
         <Loaded Value="True"/>
@@ -691,123 +689,123 @@
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="formapplypatch.pas"/>
-        <Caret Line="29" Column="15" TopLine="12"/>
+        <Caret Line="151" TopLine="117"/>
       </Position1>
       <Position2>
         <Filename Value="formapplypatch.pas"/>
-        <Caret Line="73" Column="3" TopLine="69"/>
+        <Caret Line="152" TopLine="118"/>
       </Position2>
       <Position3>
         <Filename Value="formapplypatch.pas"/>
-        <Caret Line="39" Column="15" TopLine="23"/>
+        <Caret Line="153" TopLine="119"/>
       </Position3>
       <Position4>
         <Filename Value="formapplypatch.pas"/>
-        <Caret Line="114" Column="15" TopLine="107"/>
+        <Caret Line="154" TopLine="120"/>
       </Position4>
       <Position5>
         <Filename Value="formapplypatch.pas"/>
-        <Caret Line="103" Column="24" TopLine="100"/>
+        <Caret Line="155" TopLine="121"/>
       </Position5>
       <Position6>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="208" Column="3" TopLine="191"/>
+        <Filename Value="formapplypatch.pas"/>
+        <Caret Line="44" Column="15" TopLine="28"/>
       </Position6>
       <Position7>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="130" Column="15" TopLine="114"/>
+        <Filename Value="formapplypatch.pas"/>
+        <Caret Line="134" Column="53" TopLine="132"/>
       </Position7>
       <Position8>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="365" Column="20" TopLine="355"/>
+        <Filename Value="formapplypatch.pas"/>
+        <Caret Line="138" Column="16" TopLine="109"/>
       </Position8>
       <Position9>
         <Filename Value="formapplypatch.pas"/>
-        <Caret Line="138" Column="27" TopLine="128"/>
+        <Caret Line="137" Column="49" TopLine="122"/>
       </Position9>
       <Position10>
-        <Filename Value="patchfile.pas"/>
-        <Caret Line="54" Column="3" TopLine="52"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="778" Column="27" TopLine="759"/>
       </Position10>
       <Position11>
-        <Filename Value="formapplypatch.pas"/>
-        <Caret Line="148" Column="32" TopLine="128"/>
+        <Filename Value="formexportpatch.pas"/>
+        <Caret Line="87" TopLine="71"/>
       </Position11>
       <Position12>
-        <Filename Value="patchfile.pas"/>
-        <Caret Line="22" Column="24" TopLine="7"/>
+        <Filename Value="formapplypatch.pas"/>
+        <Caret Line="138" TopLine="122"/>
       </Position12>
       <Position13>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="20" Column="69"/>
+        <Filename Value="formapplypatch.pas"/>
+        <Caret Line="36" Column="15" TopLine="19"/>
       </Position13>
       <Position14>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="619" Column="27" TopLine="590"/>
+        <Filename Value="formapplypatch.pas"/>
+        <Caret Line="138" Column="5" TopLine="111"/>
       </Position14>
       <Position15>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="149" Column="29" TopLine="125"/>
+        <Filename Value="formapplypatch.pas"/>
+        <Caret Line="178" Column="21" TopLine="147"/>
       </Position15>
       <Position16>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="71" Column="15" TopLine="55"/>
+        <Filename Value="formapplypatch.pas"/>
+        <Caret Line="125" TopLine="108"/>
       </Position16>
       <Position17>
-        <Filename Value="syntagm.pas"/>
-        <Caret Line="336" Column="34" TopLine="334"/>
+        <Filename Value="formapplypatch.pas"/>
+        <Caret Line="126" TopLine="108"/>
       </Position17>
       <Position18>
-        <Filename Value="syntagm.pas"/>
-        <Caret Line="88" Column="29" TopLine="73"/>
+        <Filename Value="formapplypatch.pas"/>
+        <Caret Line="127" TopLine="108"/>
       </Position18>
       <Position19>
-        <Filename Value="syntagm.pas"/>
-        <Caret Line="252" Column="10" TopLine="230"/>
+        <Filename Value="formapplypatch.pas"/>
+        <Caret Line="128" TopLine="108"/>
       </Position19>
       <Position20>
-        <Filename Value="syntagm.pas"/>
-        <Caret Line="341" TopLine="336"/>
+        <Filename Value="formapplypatch.pas"/>
+        <Caret Line="120" TopLine="108"/>
       </Position20>
       <Position21>
-        <Filename Value="syntagm.pas"/>
-        <Caret Line="352" Column="10" TopLine="336"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="365" Column="27" TopLine="355"/>
       </Position21>
       <Position22>
-        <Filename Value="syntagm.pas"/>
-        <Caret Line="87" Column="15" TopLine="72"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="155" Column="15" TopLine="138"/>
       </Position22>
       <Position23>
-        <Filename Value="syntagm.pas"/>
-        <Caret Line="191" TopLine="178"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="728" Column="3" TopLine="755"/>
       </Position23>
       <Position24>
-        <Filename Value="syntagm.pas"/>
-        <Caret Line="190" Column="12" TopLine="173"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="158" Column="15" TopLine="142"/>
       </Position24>
       <Position25>
-        <Filename Value="formapplypatch.pas"/>
-        <Caret Line="76" Column="29" TopLine="48"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="95" Column="45" TopLine="79"/>
       </Position25>
       <Position26>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="177" Column="3" TopLine="175"/>
+        <Caret Line="83" Column="15" TopLine="80"/>
       </Position26>
       <Position27>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="95" Column="45" TopLine="79"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1997" Column="3" TopLine="1993"/>
       </Position27>
       <Position28>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="177" Column="3" TopLine="228"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="162" Column="15" TopLine="147"/>
       </Position28>
       <Position29>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="94" Column="17" TopLine="79"/>
+        <Filename Value="formexportpatch.pas"/>
+        <Caret Line="86" TopLine="71"/>
       </Position29>
       <Position30>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="1408" Column="3" TopLine="1380"/>
+        <Filename Value="formexportpatch.pas"/>
+        <Caret Line="32" Column="15" TopLine="15"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
