--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -150,7 +150,7 @@
         <PackageName Value="LCL"/>
       </Item5>
     </RequiredPackages>
-    <Units Count="55">
+    <Units Count="56">
       <Unit0>
         <Filename Value="iBiblia.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -167,8 +167,8 @@
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="formPrincipal"/>
         <EditorIndex Value="3"/>
-        <TopLine Value="832"/>
-        <CursorPos X="3" Y="837"/>
+        <TopLine Value="1074"/>
+        <CursorPos X="23" Y="1105"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -177,9 +177,9 @@
         <Filename Value="versiculo.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Versiculo"/>
-        <EditorIndex Value="16"/>
-        <TopLine Value="1334"/>
-        <CursorPos X="3" Y="1338"/>
+        <EditorIndex Value="18"/>
+        <TopLine Value="1170"/>
+        <CursorPos X="33" Y="1118"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -194,10 +194,9 @@
         <Filename Value="projeto.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Projeto"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="4"/>
-        <TopLine Value="1232"/>
-        <CursorPos X="43" Y="1256"/>
+        <TopLine Value="1357"/>
+        <CursorPos X="21" Y="1385"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -212,7 +211,7 @@
         <Filename Value="sugestao.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Sugestao"/>
-        <EditorIndex Value="24"/>
+        <EditorIndex Value="25"/>
         <TopLine Value="227"/>
         <CursorPos X="30" Y="245"/>
         <UsageCount Value="207"/>
@@ -224,7 +223,7 @@
         <ComponentName Value="FormNovoProjeto"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="22"/>
+        <EditorIndex Value="23"/>
         <TopLine Value="39"/>
         <CursorPos Y="58"/>
         <UsageCount Value="205"/>
@@ -237,7 +236,7 @@
         <ComponentName Value="frmDictionaryPopup"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="23"/>
+        <EditorIndex Value="24"/>
         <TopLine Value="4"/>
         <CursorPos X="29" Y="56"/>
         <UsageCount Value="201"/>
@@ -269,9 +268,9 @@
         <Filename Value="memoversiculo.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="MemoVersiculo"/>
-        <EditorIndex Value="25"/>
-        <TopLine Value="99"/>
-        <CursorPos X="28" Y="94"/>
+        <EditorIndex Value="7"/>
+        <TopLine Value="93"/>
+        <CursorPos X="22" Y="118"/>
         <UsageCount Value="224"/>
         <Loaded Value="True"/>
       </Unit9>
@@ -290,7 +289,7 @@
         <ComponentName Value="frmExportarProjeto"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="13"/>
+        <EditorIndex Value="15"/>
         <CursorPos X="64" Y="9"/>
         <UsageCount Value="203"/>
         <Loaded Value="True"/>
@@ -300,7 +299,7 @@
         <Filename Value="exportarprojeto.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ExportarProjeto"/>
-        <EditorIndex Value="12"/>
+        <EditorIndex Value="14"/>
         <TopLine Value="427"/>
         <CursorPos X="35" Y="440"/>
         <UsageCount Value="203"/>
@@ -384,7 +383,7 @@
         <ComponentName Value="FormAbout"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="15"/>
+        <EditorIndex Value="17"/>
         <TopLine Value="11"/>
         <CursorPos X="18" Y="12"/>
         <UsageCount Value="241"/>
@@ -395,7 +394,7 @@
         <Filename Value="myswordmodule.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="MySwordModule"/>
-        <EditorIndex Value="21"/>
+        <EditorIndex Value="22"/>
         <TopLine Value="15"/>
         <CursorPos X="61" Y="33"/>
         <UsageCount Value="213"/>
@@ -414,9 +413,10 @@
         <Filename Value="chapterview.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ChapterView"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="6"/>
-        <TopLine Value="559"/>
-        <CursorPos X="5" Y="570"/>
+        <TopLine Value="1229"/>
+        <CursorPos Y="1242"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit23>
@@ -430,10 +430,11 @@
       </Unit24>
       <Unit25>
         <Filename Value="C:\Users\rubio\AppData\Local\lazarus\onlinepackagemanager\packages\kcontrols\source\kmemo.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="7120"/>
-        <CursorPos X="3" Y="7123"/>
+        <EditorIndex Value="8"/>
+        <TopLine Value="2410"/>
+        <CursorPos X="14" Y="2426"/>
         <UsageCount Value="100"/>
+        <Loaded Value="True"/>
       </Unit25>
       <Unit26>
         <Filename Value="htmlcolors.pas"/>
@@ -448,7 +449,7 @@
       <Unit27>
         <Filename Value="theworddictionary.pas"/>
         <UnitName Value="TheWordDictionary"/>
-        <EditorIndex Value="11"/>
+        <EditorIndex Value="13"/>
         <TopLine Value="224"/>
         <CursorPos Y="236"/>
         <UsageCount Value="256"/>
@@ -457,7 +458,7 @@
       <Unit28>
         <Filename Value="include\bookdefs.inc"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="10"/>
+        <EditorIndex Value="12"/>
         <TopLine Value="103"/>
         <CursorPos X="13" Y="84"/>
         <UsageCount Value="249"/>
@@ -468,7 +469,7 @@
         <ComponentName Value="FormExportPatch"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="10"/>
         <TopLine Value="53"/>
         <CursorPos X="43" Y="67"/>
         <UsageCount Value="123"/>
@@ -485,7 +486,7 @@
       <Unit31>
         <Filename Value="bibletreeview.pas"/>
         <UnitName Value="BibleTreeView"/>
-        <EditorIndex Value="19"/>
+        <EditorIndex Value="21"/>
         <TopLine Value="188"/>
         <CursorPos Y="204"/>
         <UsageCount Value="120"/>
@@ -497,7 +498,7 @@
         <ComponentName Value="FrmApplyPatch"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="9"/>
         <TopLine Value="108"/>
         <CursorPos X="104" Y="128"/>
         <UsageCount Value="241"/>
@@ -508,7 +509,7 @@
         <Filename Value="patchfile.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="PatchFile"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="11"/>
         <TopLine Value="25"/>
         <CursorPos X="29" Y="38"/>
         <UsageCount Value="241"/>
@@ -518,7 +519,7 @@
         <Filename Value="projectfile.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ProjectFile"/>
-        <EditorIndex Value="18"/>
+        <EditorIndex Value="20"/>
         <CursorPos X="32" Y="40"/>
         <UsageCount Value="238"/>
         <Loaded Value="True"/>
@@ -576,9 +577,9 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="formInterlinearVerseRules"/>
-        <EditorIndex Value="14"/>
-        <TopLine Value="31"/>
-        <CursorPos X="25" Y="52"/>
+        <EditorIndex Value="16"/>
+        <TopLine Value="9"/>
+        <CursorPos Y="15"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -586,11 +587,10 @@
       <Unit42>
         <Filename Value="C:\tools\lazarus\lcl\controls.pp"/>
         <UnitName Value="Controls"/>
-        <EditorIndex Value="20"/>
-        <TopLine Value="36"/>
-        <CursorPos X="3" Y="55"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="1477"/>
+        <CursorPos X="14" Y="1492"/>
         <UsageCount Value="103"/>
-        <Loaded Value="True"/>
       </Unit42>
       <Unit43>
         <Filename Value="C:\tools\lazarus\fpc\3.2.0\source\rtl\objpas\fgl.pp"/>
@@ -625,7 +625,7 @@
       <Unit47>
         <Filename Value="syntagm.pas"/>
         <UnitName Value="Syntagm"/>
-        <EditorIndex Value="17"/>
+        <EditorIndex Value="19"/>
         <TopLine Value="106"/>
         <CursorPos X="31" Y="121"/>
         <UsageCount Value="118"/>
@@ -666,9 +666,9 @@
         <Filename Value="C:\tools\lazarus\lcl\stdctrls.pp"/>
         <UnitName Value="StdCtrls"/>
         <EditorIndex Value="-1"/>
-        <TopLine Value="1553"/>
-        <CursorPos X="15" Y="1569"/>
-        <UsageCount Value="2"/>
+        <TopLine Value="881"/>
+        <CursorPos X="17" Y="898"/>
+        <UsageCount Value="10"/>
       </Unit52>
       <Unit53>
         <Filename Value="C:\tools\lazarus\components\lazutils\LazLoggerImpl.inc"/>
@@ -685,127 +685,134 @@
         <CursorPos X="3" Y="97"/>
         <UsageCount Value="1"/>
       </Unit54>
+      <Unit55>
+        <Filename Value="C:\tools\lazarus\fpc\3.2.0\source\rtl\objpas\classes\classesh.inc"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="101"/>
+        <CursorPos X="44" Y="118"/>
+        <UsageCount Value="10"/>
+      </Unit55>
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="formapplypatch.pas"/>
-        <Caret Line="151" TopLine="117"/>
+        <Filename Value="chapterview.pas"/>
+        <Caret Line="1206" TopLine="1203"/>
       </Position1>
       <Position2>
-        <Filename Value="formapplypatch.pas"/>
-        <Caret Line="152" TopLine="118"/>
+        <Filename Value="chapterview.pas"/>
+        <Caret Line="25" Column="44" TopLine="8"/>
       </Position2>
       <Position3>
-        <Filename Value="formapplypatch.pas"/>
-        <Caret Line="153" TopLine="119"/>
+        <Filename Value="chapterview.pas"/>
+        <Caret Line="28" Column="22" TopLine="11"/>
       </Position3>
       <Position4>
-        <Filename Value="formapplypatch.pas"/>
-        <Caret Line="154" TopLine="120"/>
+        <Filename Value="chapterview.pas"/>
+        <Caret Line="204" Column="3" TopLine="202"/>
       </Position4>
       <Position5>
-        <Filename Value="formapplypatch.pas"/>
-        <Caret Line="155" TopLine="121"/>
+        <Filename Value="chapterview.pas"/>
+        <Caret Line="186" Column="13" TopLine="169"/>
       </Position5>
       <Position6>
-        <Filename Value="formapplypatch.pas"/>
-        <Caret Line="44" Column="15" TopLine="28"/>
+        <Filename Value="chapterview.pas"/>
+        <Caret Line="187" Column="22" TopLine="181"/>
       </Position6>
       <Position7>
-        <Filename Value="formapplypatch.pas"/>
-        <Caret Line="134" Column="53" TopLine="132"/>
+        <Filename Value="chapterview.pas"/>
+        <Caret Line="119" Column="15" TopLine="104"/>
       </Position7>
       <Position8>
-        <Filename Value="formapplypatch.pas"/>
-        <Caret Line="138" Column="16" TopLine="109"/>
+        <Filename Value="chapterview.pas"/>
+        <Caret Line="781" TopLine="773"/>
       </Position8>
       <Position9>
-        <Filename Value="formapplypatch.pas"/>
-        <Caret Line="137" Column="49" TopLine="122"/>
+        <Filename Value="chapterview.pas"/>
+        <Caret Line="203" TopLine="186"/>
       </Position9>
       <Position10>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="778" Column="27" TopLine="759"/>
+        <Filename Value="chapterview.pas"/>
+        <Caret Line="204" TopLine="186"/>
       </Position10>
       <Position11>
-        <Filename Value="formexportpatch.pas"/>
-        <Caret Line="87" TopLine="71"/>
+        <Filename Value="chapterview.pas"/>
+        <Caret Line="205" TopLine="186"/>
       </Position11>
       <Position12>
-        <Filename Value="formapplypatch.pas"/>
-        <Caret Line="138" TopLine="122"/>
+        <Filename Value="chapterview.pas"/>
+        <Caret Line="206" TopLine="186"/>
       </Position12>
       <Position13>
-        <Filename Value="formapplypatch.pas"/>
-        <Caret Line="36" Column="15" TopLine="19"/>
+        <Filename Value="chapterview.pas"/>
+        <Caret Line="207" TopLine="186"/>
       </Position13>
       <Position14>
-        <Filename Value="formapplypatch.pas"/>
-        <Caret Line="138" Column="5" TopLine="111"/>
+        <Filename Value="chapterview.pas"/>
+        <Caret Line="203" TopLine="186"/>
       </Position14>
       <Position15>
-        <Filename Value="formapplypatch.pas"/>
-        <Caret Line="178" Column="21" TopLine="147"/>
+        <Filename Value="chapterview.pas"/>
+        <Caret Line="208" TopLine="186"/>
       </Position15>
       <Position16>
-        <Filename Value="formapplypatch.pas"/>
-        <Caret Line="125" TopLine="108"/>
+        <Filename Value="chapterview.pas"/>
+        <Caret Line="780" TopLine="763"/>
       </Position16>
       <Position17>
-        <Filename Value="formapplypatch.pas"/>
-        <Caret Line="126" TopLine="108"/>
+        <Filename Value="chapterview.pas"/>
+        <Caret Line="778" TopLine="763"/>
       </Position17>
       <Position18>
-        <Filename Value="formapplypatch.pas"/>
-        <Caret Line="127" TopLine="108"/>
+        <Filename Value="chapterview.pas"/>
+        <Caret Line="781" Column="16" TopLine="763"/>
       </Position18>
       <Position19>
-        <Filename Value="formapplypatch.pas"/>
-        <Caret Line="128" TopLine="108"/>
+        <Filename Value="chapterview.pas"/>
+        <Caret Line="209" TopLine="184"/>
       </Position19>
       <Position20>
-        <Filename Value="formapplypatch.pas"/>
-        <Caret Line="120" TopLine="108"/>
+        <Filename Value="forminterlinearverserules.pas"/>
+        <Caret Line="52" Column="25" TopLine="31"/>
       </Position20>
       <Position21>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="365" Column="27" TopLine="355"/>
+        <Filename Value="forminterlinearverserules.pas"/>
+        <Caret Line="51" Column="25" TopLine="30"/>
       </Position21>
       <Position22>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="155" Column="15" TopLine="138"/>
+        <Filename Value="forminterlinearverserules.pas"/>
+        <Caret Line="47" Column="45" TopLine="30"/>
       </Position22>
       <Position23>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="728" Column="3" TopLine="755"/>
+        <Filename Value="chapterview.pas"/>
+        <Caret Line="180" TopLine="310"/>
       </Position23>
       <Position24>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="158" Column="15" TopLine="142"/>
+        <Filename Value="chapterview.pas"/>
+        <Caret Line="119" Column="15" TopLine="104"/>
       </Position24>
       <Position25>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="95" Column="45" TopLine="79"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="852" Column="45" TopLine="832"/>
       </Position25>
       <Position26>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="83" Column="15" TopLine="80"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="1105" Column="23" TopLine="1074"/>
       </Position26>
       <Position27>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1997" Column="3" TopLine="1993"/>
+        <Filename Value="chapterview.pas"/>
+        <Caret Line="147" Column="14" TopLine="131"/>
       </Position27>
       <Position28>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="162" Column="15" TopLine="147"/>
+        <Filename Value="chapterview.pas"/>
+        <Caret Line="1022" Column="10" TopLine="1017"/>
       </Position28>
       <Position29>
-        <Filename Value="formexportpatch.pas"/>
-        <Caret Line="86" TopLine="71"/>
+        <Filename Value="chapterview.pas"/>
+        <Caret Line="1232" Column="13" TopLine="1230"/>
       </Position29>
       <Position30>
-        <Filename Value="formexportpatch.pas"/>
-        <Caret Line="32" Column="15" TopLine="15"/>
+        <Filename Value="chapterview.pas"/>
+        <Caret Line="668" Column="13" TopLine="651"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
